# noteware

./: .env example  README.md  app_template.py  main.py  notion.py  pyproject.toml  searchWorker.py
